# online-media-dl

./: .gitignore  README.md  batch_downloads.yaml  project-structure.txt  pyproject.toml  requirements.txt  setup.cfg
app/src/omdl/: cli.py  config_loader.py  constants.py  downloader.py  format_selector.py  menu.py  output.py  settings.py  utils.py
app/src/omdl/providers/: __init__.py  base.py  facebook.py  instagram.py  tiktok.py  x.py  youtube.py
config/: default.yaml  local.yaml
config/providers/: facebook.yaml  x.yaml  youtube.yaml
cookies/: README.md
scripts/: dev-setup.sh  run.sh
